--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,7 +70,11 @@
      <Compile Include="Assets\scripts\A\Unit.cs" />
      <Compile Include="Assets\scripts\Demon\Mortal.cs" />
      <Compile Include="Assets\scripts\Demon\Transmit.cs" />
+     <Compile Include="Assets\scripts\Sprite\Billboard.cs" />
+     <Compile Include="Assets\scripts\Sprite\Pixelate.cs" />
      <None Include="Assets\Invector-3rdPersonController\Basic Locomotion LITE\README_Basic.txt" />
+     <None Include="Assets\shaders\imgEff\Pixelate.shader" />
+     <None Include="Assets\shaders\BillboardShader.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
