--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
      <Compile Include="Assets\scripts\A\pathfinding.cs" />
      <Compile Include="Assets\scripts\A\PathManager.cs" />
      <Compile Include="Assets\scripts\A\Unit.cs" />
+     <Compile Include="Assets\scripts\camera\Orbit.cs" />
      <Compile Include="Assets\scripts\Demon\Mortal.cs" />
      <Compile Include="Assets\scripts\Demon\Transmit.cs" />
      <Compile Include="Assets\scripts\Sprite\Billboard.cs" />
