--- a/GlobalGameJam.Editor.csproj
+++ b/GlobalGameJam.Editor.csproj
@@ -129,6 +129,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Invector-3rdPersonController\Basic Locomotion LITE\README_Basic.txt" />
+    <None Include="Assets\shaders\BillboardShader.shader" />
+    <None Include="Assets\shaders\imgEff\Pixelate.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
