--- a/GlobalGameJam.csproj
+++ b/GlobalGameJam.csproj
@@ -98,9 +98,13 @@
     <Compile Include="Assets\scripts\A\pathfinding.cs" />
     <Compile Include="Assets\scripts\Demon\Mortal.cs" />
     <Compile Include="Assets\scripts\Demon\Transmit.cs" />
+    <Compile Include="Assets\scripts\Sprite\Billboard.cs" />
+    <Compile Include="Assets\scripts\Sprite\Pixelate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Invector-3rdPersonController\Basic Locomotion LITE\README_Basic.txt" />
+    <None Include="Assets\shaders\BillboardShader.shader" />
+    <None Include="Assets\shaders\imgEff\Pixelate.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
