--- a/GlobalGameJam.csproj
+++ b/GlobalGameJam.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Assets\scripts\Sprite\Billboard.cs" />
     <Compile Include="Assets\scripts\Sprite\Pixelate.cs" />
     <Compile Include="Assets\scripts\camera\Orbit.cs" />
+    <Compile Include="Assets\waypoint.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Invector-3rdPersonController\Basic Locomotion LITE\README_Basic.txt" />
