--- a/GlobalGameJam.csproj
+++ b/GlobalGameJam.csproj
@@ -98,14 +98,20 @@
     <Compile Include="Assets\scripts\A\pathfinding.cs" />
     <Compile Include="Assets\scripts\Demon\Mortal.cs" />
     <Compile Include="Assets\scripts\Demon\Transmit.cs" />
+    <Compile Include="Assets\scripts\NPC\NPCGlow.cs" />
     <Compile Include="Assets\scripts\Sprite\Billboard.cs" />
     <Compile Include="Assets\scripts\Sprite\Pixelate.cs" />
+    <Compile Include="Assets\scripts\Sprite\Sprite25.cs" />
+    <Compile Include="Assets\scripts\World\LevelLoader.cs" />
+    <Compile Include="Assets\scripts\World\LevelUnloader.cs" />
     <Compile Include="Assets\scripts\camera\Orbit.cs" />
     <Compile Include="Assets\waypoint.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Invector-3rdPersonController\Basic Locomotion LITE\README_Basic.txt" />
     <None Include="Assets\shaders\BillboardShader.shader" />
+    <None Include="Assets\shaders\ItemShader.shader" />
+    <None Include="Assets\shaders\NPCShader.shader" />
     <None Include="Assets\shaders\imgEff\Pixelate.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
