--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,6 +70,8 @@
      <Compile Include="Assets\scripts\A\PathManager.cs" />
      <Compile Include="Assets\scripts\A\Unit.cs" />
      <Compile Include="Assets\scripts\camera\Orbit.cs" />
+     <Compile Include="Assets\scripts\camera\ThirdPerson.cs" />
+     <Compile Include="Assets\scripts\DDOL.cs" />
      <Compile Include="Assets\scripts\Demon\Mortal.cs" />
      <Compile Include="Assets\scripts\Demon\Transmit.cs" />
      <Compile Include="Assets\scripts\NPC\NPCGlow.cs" />
@@ -92,12 +94,6 @@
  </Reference>
  <Reference Include="UnityEngine.TestRunner">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/TestRunner/UnityEngine.TestRunner.dll</HintPath>
- </Reference>
- <Reference Include="nunit.framework">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/TestRunner/net35/unity-custom/nunit.framework.dll</HintPath>
- </Reference>
- <Reference Include="UnityEngine.Timeline">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Timeline/RuntimeEditor/UnityEngine.Timeline.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Analytics">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
