--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -75,6 +75,7 @@
      <Compile Include="Assets\scripts\Demon\Mortal.cs" />
      <Compile Include="Assets\scripts\Demon\Transmit.cs" />
      <Compile Include="Assets\scripts\NPC\NPCGlow.cs" />
+     <Compile Include="Assets\scripts\SelfDestruct.cs" />
      <Compile Include="Assets\scripts\Sprite\Billboard.cs" />
      <Compile Include="Assets\scripts\Sprite\Pixelate.cs" />
      <Compile Include="Assets\scripts\Sprite\Sprite25.cs" />
