--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
      <Compile Include="Assets\scripts\A\pathfinding.cs" />
      <Compile Include="Assets\scripts\A\PathManager.cs" />
      <Compile Include="Assets\scripts\A\Unit.cs" />
+     <Compile Include="Assets\scripts\camera\CameraShake.cs" />
      <Compile Include="Assets\scripts\camera\Orbit.cs" />
      <Compile Include="Assets\scripts\camera\ThirdPerson.cs" />
      <Compile Include="Assets\scripts\DDOL.cs" />
