--- a/GlobalGameJam.csproj
+++ b/GlobalGameJam.csproj
@@ -96,15 +96,19 @@
     <Compile Include="Assets\scripts\A\PathManager.cs" />
     <Compile Include="Assets\scripts\A\Unit.cs" />
     <Compile Include="Assets\scripts\A\pathfinding.cs" />
+    <Compile Include="Assets\scripts\DDOL.cs" />
     <Compile Include="Assets\scripts\Demon\Mortal.cs" />
     <Compile Include="Assets\scripts\Demon\Transmit.cs" />
     <Compile Include="Assets\scripts\NPC\NPCGlow.cs" />
+    <Compile Include="Assets\scripts\SelfDestruct.cs" />
     <Compile Include="Assets\scripts\Sprite\Billboard.cs" />
     <Compile Include="Assets\scripts\Sprite\Pixelate.cs" />
     <Compile Include="Assets\scripts\Sprite\Sprite25.cs" />
     <Compile Include="Assets\scripts\World\LevelLoader.cs" />
     <Compile Include="Assets\scripts\World\LevelUnloader.cs" />
+    <Compile Include="Assets\scripts\camera\CameraShake.cs" />
     <Compile Include="Assets\scripts\camera\Orbit.cs" />
+    <Compile Include="Assets\scripts\camera\ThirdPerson.cs" />
     <Compile Include="Assets\waypoint.cs" />
   </ItemGroup>
   <ItemGroup>
